--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,42 +45,25 @@
 
     <Button
         android:id="@+id/addNewItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_width="152dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:layout_marginBottom="1dp"
         android:onClick="AddProduct"
         android:text="Add New Product"
         app:layout_constraintBottom_toTopOf="@+id/productsView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ShowProduct0"
-        app:layout_constraintTop_toBottomOf="@+id/ShopName" />
-
-    <TextView
-        android:id="@+id/ShowProduct0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="50dp"
-        android:gravity="left"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/productsView"
-        app:layout_constraintEnd_toStartOf="@+id/addNewItem"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintStart_toStartOf="@+id/productsView"
         app:layout_constraintTop_toBottomOf="@+id/ShopName" />
 
     <ListView
         android:id="@+id/productsView"
-        android:layout_width="310dp"
-        android:layout_height="555dp"
+        android:layout_width="319dp"
+        android:layout_height="525dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="5dp"
@@ -92,4 +75,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addNewItem" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginBottom="17dp"
+        android:onClick="RemovedProductsPage"
+        android:text="Removed Products"
+        app:layout_constraintBottom_toTopOf="@+id/productsView"
+        app:layout_constraintEnd_toEndOf="@+id/productsView"
+        app:layout_constraintStart_toEndOf="@+id/addNewItem"
+        app:layout_constraintTop_toBottomOf="@+id/ShopName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
