--- a/app/src/main/res/layout/activity_item_edit.xml
+++ b/app/src/main/res/layout/activity_item_edit.xml
@@ -54,7 +54,7 @@
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginBottom="150dp"
-        android:onClick="RemoveItemDialog"
+        android:onClick="RemoveItemPage"
         android:text="Remove"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
