--- a/app/src/main/res/layout/activity_remove_product_page.xml
+++ b/app/src/main/res/layout/activity_remove_product_page.xml
@@ -35,15 +35,16 @@
 
     <EditText
         android:id="@+id/AmountExpired"
-        android:layout_width="113dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="149dp"
-        android:layout_marginLeft="149dp"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginLeft="250dp"
         android:layout_marginTop="75dp"
-        android:layout_marginEnd="149dp"
-        android:layout_marginRight="149dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginRight="250dp"
         android:layout_marginBottom="101dp"
         android:ems="10"
+        android:gravity="center|center_horizontal|center_vertical"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/RemoveProductConfirm"
         app:layout_constraintEnd_toEndOf="parent"
