--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,28 +44,26 @@
 
     <Button
         android:id="@+id/addNewItem"
-        android:layout_width="152dp"
-        android:layout_height="45dp"
+        android:layout_width="155dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
-        android:layout_marginBottom="1dp"
         android:onClick="AddProduct"
         android:text="Add New Product"
-        app:layout_constraintBottom_toTopOf="@+id/productsView"
+        app:layout_constraintBottom_toTopOf="@+id/productSearch"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintStart_toStartOf="@+id/productsView"
         app:layout_constraintTop_toBottomOf="@+id/ShopName" />
 
     <ListView
         android:id="@+id/productsView"
-        android:layout_width="319dp"
-        android:layout_height="525dp"
+        android:layout_width="309dp"
+        android:layout_height="486dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="5dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="35dp"
@@ -73,7 +71,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addNewItem" />
+        app:layout_constraintTop_toBottomOf="@+id/productSearch" />
 
     <Button
         android:id="@+id/button2"
@@ -81,11 +79,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginLeft="2dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginTop="20dp"
         android:onClick="RemovedProductsPage"
         android:text="Removed Products"
-        app:layout_constraintBottom_toTopOf="@+id/productsView"
+        app:layout_constraintBottom_toTopOf="@+id/productSearch"
         app:layout_constraintEnd_toEndOf="@+id/productsView"
         app:layout_constraintStart_toEndOf="@+id/addNewItem"
         app:layout_constraintTop_toBottomOf="@+id/ShopName" />
@@ -98,5 +95,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <SearchView
+        android:id="@+id/productSearch"
+        android:layout_width="344dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="75dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/productsView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ShopName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
