--- a/app/src/main/res/layout/activity_item_edit.xml
+++ b/app/src/main/res/layout/activity_item_edit.xml
@@ -16,10 +16,10 @@
         android:layout_marginTop="200dp"
         android:layout_marginEnd="175dp"
         android:layout_marginRight="175dp"
-        android:layout_marginBottom="69dp"
+        android:layout_marginBottom="50dp"
         android:text="Name"
         android:textColor="#000000"
-        android:textSize="30sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/editDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,15 +31,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="174dp"
         android:layout_marginLeft="174dp"
-        android:layout_marginTop="69dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="175dp"
         android:layout_marginRight="175dp"
-        android:layout_marginBottom="171dp"
-        android:onClick="EditDate"
+        android:layout_marginBottom="100dp"
         android:text="Date"
         android:textColor="#000000"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/offlineList"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/saveProduct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editProductName" />
@@ -50,51 +49,45 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="600dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="150dp"
         android:onClick="RemoveItemPage"
         android:text="Remove"
+        android:textColor="@color/design_default_color_error"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/updateProduct"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.396"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/saveProduct"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/updateProduct"
+        android:id="@+id/saveProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="600dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="150dp"
-        android:onClick="Update"
-        android:text="Update"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/removeProduct"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/offlineList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="175dp"
-        android:layout_marginLeft="175dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="178dp"
-        android:layout_marginRight="178dp"
         android:layout_marginBottom="100dp"
-        android:editable="false"
-        android:text="TextView"
+        android:onClick="SaveUpdate"
+        android:text="Save"
+        android:textSize="24sp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/removeProduct"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.598"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editDate" />
+
+    <Button
+        android:id="@+id/ChangeDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="EditDate"
+        android:text="Change Date"
+        app:layout_constraintBottom_toTopOf="@+id/editDate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editProductName" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
